--- a/contact.css
+++ b/contact.css
@@ -22,6 +22,7 @@
 .otherContact img{
     height: fit-content;
     width: 28vw; 
+    height: 28vw;
 }
 .formSection{
     display: flex;
@@ -201,6 +202,7 @@ width: 90vw;
 }
 .otherContact img {
     width: 5vw;
+    height: 5vw;
     padding: 1.5vw;
     border: 1px solid black;
     border-radius: 2vw;
